--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -22,3 +22,8 @@
     <%= link_to new_list_path do%>
     <i class="fas fa-plus-circle"></i>
     <% end %></td>
+
+<%= cl_image_tag("yde7rlwvuijlbckxxc6t",
+      width: 400, height: 300, crop: :fill) %>
+
+      <%= image_tag "https://images.unsplash.com/photo-1600208537475-6cdbf234ca5d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=870&q=80", class:"popcorn" %>
